--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,12 +32,12 @@
           method="POST"
         >
           <div class="campo-form">
-            <label for="email"> Correo:</label>
+            <label for="email"> Mail:</label>
             <input id="email" type="email" name="email" />
           </div>
 
           <div class="campo-form">
-            <label for="mensaje"> Mensaje:</label>
+            <label for="mensaje"> Comentario</label>
             <textarea id="mensaje" name="message"></textarea>
           </div>
 
@@ -45,7 +45,7 @@
           <input type="hidden" name="subject" value="Te Buscan..." />
 
           <!-- your other form fields go here -->
-          <button type="submit">Send</button>
+          <button type="submit">Enviar</button>
         </form>
       </section>
     </main>
