--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,12 +32,17 @@
           method="POST"
         >
           <div class="campo-form">
-            <label for="email"> Mail:</label>
+            <label for="nombre">Nombre:</label>
+            <input id="nombre" type="message" name="name" />
+          </div>
+          
+          <div class="campo-form">
+            <label for="email">Mail:</label>
             <input id="email" type="email" name="email" />
           </div>
 
           <div class="campo-form">
-            <label for="mensaje"> Comentario</label>
+            <label for="mensaje">Comentario</label>
             <textarea id="mensaje" name="message"></textarea>
           </div>
 
